--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         <div class="dropdown-menu rounded-0 m-0">
                             
                             <a href="opening.html" class="dropdown-item">horario de atencion</a>
-                            <a href="team.html" class="dropdown-item">Our Team</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                            <a href="team.html" class="dropdown-item">Nuestro equipo</a>
+                            <a href="testimonial.html" class="dropdown-item">Testimonios</a>
                         </div>
                     </div>
                    
@@ -446,5 +446,6 @@ ofrecer musica             -->
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
