--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;"></h6>
-                            <h3 class="display-3 text-capitalize text-white mb-3">Masages relajantes </h3>
+                            <h3 class="display-3 text-capitalize text-white mb-3">Masajes relajantes </h3>
                             <p class="mx-md-5 px-5"> Tu cuerpo merece un respiro. </p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href=" https://wa.me/5493487332022?text=Hola%2C%20me%20interesar%C3%ADa%20reservar%20un%20turno%20para%20el%20d%C3%ADa ">Reservar</a>
                         </div>
@@ -449,3 +449,4 @@ ofrecer musica             -->
 
 
 </html>
+
